dependency updates; Java 17